src/test/resources/regression/frontends/error/xlang/Array4.scala
/* Copyright 2009-2015 EPFL, Lausanne */

object Array4 {

  def foo(a: Array[Int]): Int = {
    val b = a
    b(3)
  }

}
